# zk-gatekeeper

./: .gitignore  DEPLOYMENT.md  README.md  SUBMISSION.md  package-lock.json  submission-fields.md
circuits/: gatekeeper.circom  poseidon_helper.circom
contract/: Cargo.toml
contract/src/: lib.rs  test.rs
contract/test_snapshots/test/: claim_without_root_fails.1.json  grant_count_starts_zero_and_is_spent_false.1.json  set_root_requires_admin_and_get_root_roundtrips.1.json
inputs/: input_member2.json
proving/: gatekeeper_final.zkey  proof.hex  proof_mallory.json  public.hex  public_mallory.hex  public_mallory.json
scripts/: demo.sh  mallory.js  setup-prove.sh  tree.js
